--- a/TestTracker/CSSscripts/LoginStyle.css
+++ b/TestTracker/CSSscripts/LoginStyle.css
@@ -63,6 +63,7 @@ form {
     border-style: none;
     width: 80%;
     margin-bottom: 10%;
+    font-size: 3vh;
 }
 
 fieldset {
@@ -72,7 +73,7 @@ fieldset {
 
 legend {
     font-weight: bolder;
-    font-size: 2em;
+    font-size: 5vh;
     padding-bottom: .5em;
 }
 label {
@@ -90,7 +91,6 @@ input {
 input[type=submit] {
     margin-left: 6em;
     margin-top: 1.5em;
-    margin-bottom: 10%;
     width: 10em;
     background-color: rgb(49, 46, 46);
     color: rgb(236, 231, 231);
@@ -98,4 +98,42 @@ input[type=submit] {
     border-style: inset;
     border-width: 3px;
     border-color:  rgb(148, 161, 167);
+}
+
+@media only screen and (max-width: 700px){
+    section{
+        width: 100vw;
+        height: 100vh;
+        margin: 0 auto;
+    }
+
+    form{
+        margin-left: 2%;
+        margin-top: 1%;
+        width: 95%;
+        font-size: 1em;
+    }
+
+    legend{
+        font-size: 3em;
+    }
+}
+
+@media only screen and (min-width: 1000px){
+
+    
+    
+    form{
+    margin-left: 20%;
+    }
+
+   
+
+    input{
+        width: 30%;
+    }
+
+    input[type=submit]{
+        width: 10em;
+    }
 }
